--- a/css/agency.css
+++ b/css/agency.css
@@ -6,6 +6,8 @@
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:white;
+  background: #2E0406;
 }
 .text-muted {
   color: #777777;
@@ -226,7 +228,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header-bg2.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
